[package]
name = "bau"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wire = { git =  "ssh://git@github.com/Instant-Reactive-Systems/wire.git" }
bevy = { version = "0.12", default-features = false, features = ["multi-threaded"] }
log = "0.4.20"
bimap = "0.6"
deref-derive = "0.1.0"
axum = { version = "0.7", default-features = false, features = ["ws"] }
futures-util = "0.3"
serde = { version = "1.0" }
# wire protocol
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }

[features]
# wire protocol
json = ["dep:serde_json"]
msgpack = ["dep:rmp-serde"]
# tracing and metrics
trace = ["bevy/trace"]
trace_chrome = ["bevy/trace_chrome"]
trace_tracy = ["bevy/trace_tracy"]
trace_tracy_memory = ["bevy/trace_tracy_memory"]
